--- a/index.html
+++ b/index.html
@@ -7,37 +7,40 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #121212;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            color: #e0e0e0;
         }
         .login-container {
-            background: #fff;
+            background: #1e1e1e;
             padding: 30px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
             text-align: center;
             max-width: 400px;
             width: 100%;
         }
         h2 {
             margin-bottom: 20px;
-            color: #333;
+            color: #e0e0e0;
         }
         input[type="text"], input[type="password"] {
             width: calc(100% - 20px);
             padding: 12px;
             margin-bottom: 15px;
-            border: 1px solid #ccc;
+            border: 1px solid #424242;
             border-radius: 5px;
             font-size: 16px;
+            background: #333;
+            color: #e0e0e0;
         }
         button {
-            background-color: #28a745;
+            background-color: #4CAF50;
             color: white;
             border: none;
             padding: 15px;
@@ -47,7 +50,7 @@
             cursor: pointer;
         }
         button:hover {
-            background-color: #218838;
+            background-color: #388E3C;
         }
         .error {
             color: red;
